<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="editViewN">

    <ImageView
        android:layout_width="112dp"
        android:layout_height="126dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/fabric_image"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <RelativeLayout
        android:layout_width="186dp"
        android:layout_height="213dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="91dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="89dp"
            android:layout_marginLeft="89dp"
            android:layout_marginTop="37dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="91dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="89dp"
            android:layout_marginLeft="89dp"
            android:layout_marginTop="72dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="91dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="106dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="91dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="177dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="91dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="89dp"
            android:layout_marginLeft="89dp"
            android:layout_marginTop="142dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="76dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="4dp"
            android:text="Source:" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="76dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="76dp"
            android:text="Quantity:" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="76dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="40dp"
            android:text="Price per unit:" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="76dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="71dp"
            android:text="Size:" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="76dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="36dp"
            android:text="Material:" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="0dp"
            android:text="Item name from intent" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="258dp"
        android:text="@string/notes" />

    <TextView
        android:id="@+id/notesID"
        android:layout_width="322dp"
        android:layout_height="345dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="325dp"
        android:text="@string/notes_entered_by_user" />

</RelativeLayout>